--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -2,16 +2,22 @@
   "name": "http-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b",
+    "dev": "npm run build && npm run start",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
-    "@repo/typescript-config":"workspace:*",
-    "@repo/prisma" : "workspace:*"
+    "@repo/prisma": "workspace:*",
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2"
+  }
 }
