--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "gcpDeployment",
+  "name": "gcp-deployment",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
