--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -2,8 +2,10 @@
   "name": "@repo/prisma",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
+
   "exports":{
-    "./client" : "./db.ts"
+    "./client" : "./index.js"
   },
   "dependencies": {
     "@prisma/client": "6.4.1",
@@ -13,6 +15,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  
   "description": ""
 }
